# uipath-skills

./: .gitignore  .tool-versions  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  README.md
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: generate-tasks.md
.claude/rules/: content-quality.md  pr-review.md  skill-review.md  skill-structure.md
.cursor/rules/: project-overview.mdc  skill-editing.mdc
.github/workflows/: daily-version-bump.yml  skill-eval.yml  smoke-skills.yml  test-helpers.yml  validate.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
agents/: uipath-project-discovery-agent.md
docs/uipath-case-management/: cli-to-json-shift.md
evals/skill-eval/: cases.py  harness.py  models.py  report.py
hooks/: ensure-uip.sh  hooks.json  session-end-zip-project.sh
plugins/uipath/: README.md
plugins/uipath-coded-agents/: README.md
plugins/uipath-coded-agents/skills/assets/templates/: pyproject.toml
plugins/uipath-coded-workflows/: README.md
plugins/uipath-rpa-workflows/: README.md
scripts/: validate_plugin.py
skills-community/: SKILL.md
skills-experimental/: SKILL.md
skills-experimental/uipath-coded-agents/: SKILL.md
skills/shared/: cli-reference.md  ui-automation-guide.md  uia-configure-target-workflows.md  uia-debug-workflow.md  uia-multi-step-flows.md  uia-prerequisites.md  uia-selector-recovery.md  validation-loop.md
skills/uipath-agents/: SKILL.md  (+1 more)
tests/: Makefile  README.md
uipath/: README.md
uipath-coded-agents/: README.md
uipath-coded-agents/skills/setup/assets/templates/: pyproject.toml
(+848 files in other folders)
