[project]
name = "{AGENT_NAME}"
version = "0.0.1"
description = "{AGENT_DESCRIPTION}"
authors = [{ name = "Agent Developer" }]
requires-python = ">=3.11"
dependencies = [
    "uipath",
]

[dependency-groups]
dev = [
    "uipath-dev",
]

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
